# discord-linear-bot

./: .env.example  .gitignore  Cargo.toml
.claude/: settings.local.json
.github/workflows/: release.yml
migrations/: 001_initial_schema.sql  002_comment_sync.sql
scripts/: release.sh
src/: config.rs  db.rs  error.rs  main.rs
src/discord/: handler.rs
src/linear/: client.rs  poller.rs
src/sync/: backfill.rs  discord_to_linear.rs  linear_to_discord.rs  mod.rs  reconcile.rs
